# goit-web-hw-08

./: README.md  main.py  pyproject.toml
lections/: Names.json  app.py  app_odm.py  main_odm.py
lections/01 hello_world/: consumer.py  producer.py
