[tool.poetry]
name = "hw08"
version = "0.1.0"
description = ""
authors = ["AnybodyKnows <evgeniiolavrik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
mongoengine = "^0.28.2"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
